# rlwe-gke

./: .gitignore  Dockerfile  LICENSE  README.md
create_charts/gake/: all_gake.py
create_charts/gake-withoutkeygen/: all_gake.py
create_charts/gake-withoutkeygen/apon-data/: 10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  GAKE_apon
create_charts/gake-withoutkeygen/choi-data/: 10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  gake_choi
create_charts/gake-withoutkeygen/dh-data/: 10.txt  12.txt  15.txt  18.txt  6.txt  8.txt  DHGAKE.elf
create_charts/gake-withoutkeygen/qtesla-apon-data/: 10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  GAKE_apon
create_charts/gake-withoutkeygen/qtesla-choi-data/: 10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  gake_choi
create_charts/gake/apon-data/: 10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  GAKE_apon
create_charts/gake/choi-data/: 10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  gake_choi
create_charts/gake/dh-data/: 11.txt  13.txt  14.txt  16.txt  17.txt  19.txt  20.txt  3.txt  4.txt  5.txt  7.txt  9.txt
create_charts/gake/qtesla-apon-data/: 10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  GAKE_apon
create_charts/gake/qtesla-choi-data/: 10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  gake_choi
create_charts/gke/: all_gke.py
create_charts/gke/aponkex-data/: 10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  Aponkex
create_charts/gke/choigke-data/: 10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  gke_choi
create_charts/gke/dh-data/: 10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  DHKex
gake/apon-gake/: CMakeLists.txt  common.c  common.h  fft.c  fft.h  kem.c  main.c  params.h  poly.c  poly.h  reduction.c
gake/choi-gake/: CMakeLists.txt  common.c  common.h  fft.c  kex.c  main.c  params.h  poly.c  poly.h  randombytes.c  reduction.c
gake/ecdh-gake/: CMakeLists.txt  main.c  monocypher.c  randombytes.c  randombytes.h
gke/apon-gke/: CMakeLists.txt  common.c  common.h  constant_time_tricks.c  cpucycles.h  fft.c  kem.c  kem.h  main.c  params.h  poly.c  poly.h  reduction.h
gke/choi-gke/: CMakeLists.txt  common.c  common.h  constant_time_tricks.h  cpucycles.c  fft.c  keccak.h  kex.h  main.c  poly.c  poly.h  randombytes.h
gke/ecdh-gke/: CMakeLists.txt  cpucycles.c  cpucycles.h  main.c  monocypher.h
measure-funcs/: CMakeLists.txt  fft.c  fft.h  kex.c  kex.h  main.c  params.h  poly.c  poly.h  reduction.c  reduction.h
simple-msg/: CMakeLists.txt  common.c  common.h  fft.c  keccak.c  kem.c  kem.h  main.c  params.h  poly.c  poly.h  server.py
